<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/vector_icon_service_size"
                    android:layout_height="@dimen/vector_icon_service_size"
                    android:src="@drawable/vector_icon_service" />

                <TextView
                    style="@style/TxtServicesItemCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_service" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtServiceHour"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_hours" />

                <TextView
                    android:id="@+id/txtServiceDate"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_special_date" />

                <TextView
                    android:id="@+id/txtServiceSpecialInstructions"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_special_instructions" />

                <TextView
                    android:id="@+id/txtServiceGarbageInstructions"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_garbage_instructions" />

                <TextView
                    android:id="@+id/txtServiceEquipmentInstructions"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_equipment_instructions" />

                <TextView
                    android:id="@+id/txtServiceForbiddenInstructions"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_forbidden_instructions" />

                <TextView
                    android:id="@+id/txtServiceSuppliesInstructions"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_cleaning_supplies_instructions" />

                <TextView
                    android:id="@+id/txtServiceAtentionInstructions"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_attention_instructions" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/vector_icon_service_size"
                    android:layout_height="@dimen/vector_icon_service_size"
                    android:src="@drawable/vector_icon_location" />

                <TextView
                    style="@style/TxtServicesItemCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtServiceAddress"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_direction" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/vector_icon_service_size"
                    android:layout_height="@dimen/vector_icon_service_size"
                    android:src="@drawable/vector_icon_user" />

                <TextView
                    style="@style/TxtServicesItemCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_service_item_user" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtServiceUser"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_user_name" />

                <TextView
                    android:id="@+id/txtServicePhone"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_user_phone" />

                <TextView
                    android:id="@+id/txtServiceEmail"
                    style="@style/TxtServicesItemDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_item_user_email" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>