<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".controller.login.ui.LogInActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            style="@style/TxtLogInEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login_user" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextId"
            style="@style/EditLogInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:met_primaryColor="?colorAccent"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/white"
            app:met_textColorHint="@color/white_60"
            app:met_underlineColor="@color/black_60" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextPassword"
            style="@style/EditLogInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/txt_login_password"
            app:met_primaryColor="?colorAccent"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/white"
            app:met_textColorHint="@color/white_60"
            app:met_underlineColor="@color/black_60" />

        <Button
            android:id="@+id/btnLogIn"
            style="@style/BtnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_login"
            android:text="@string/btn_login" />

    </LinearLayout>

    <ImageView
        android:layout_width="130dp"
        android:layout_height="34dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:src="@drawable/logo" />
</RelativeLayout>
